fix css for high contrast

--- a/appraise/static/css/bootstrap.css
+++ b/appraise/static/css/bootstrap.css
@@ -610,7 +610,7 @@ a:focus {
 }
 
 [class*="span"].pull-right,
-.row-fluid [class*="span"].pull-right {
+.row-fluid [class*="span"].pull-right {class
   float: right;
 }
 
@@ -2140,7 +2140,7 @@ table {
 
 .table-striped tbody > tr:nth-child(odd) > td,
 .table-striped tbody > tr:nth-child(odd) > th {
-  background-color: #f9f9f9;
+  background-color: #494949;
 }
 
 .table-hover tbody tr:hover > td,
@@ -6124,7 +6124,8 @@ a.badge:focus {
   font-weight: 200;
   line-height: 30px;
   color: inherit;
-  background-color: #eeeeee;
+  //background-color: #eeeeee;
+  background-color: #635D5D;
   -webkit-border-radius: 6px;
      -moz-border-radius: 6px;
           border-radius: 6px;
